styles.css
@font-face {
    font-family: Miso;
    src: url('./assets/fonts/miso-regular.otf');
}

@font-face {
    font-family: Samarkan;
    src: url('./assets/fonts/SAMAN___.TTF');
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;

}


.landingpage {
    position: relative;
    background: url('./assets/images/home-background-reduced.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    min-height: 100vh;
}

/* .landing-page-background {
    background: url('./assets/images/home-background-reduced.png');
    background-size: auto 100%;
    background-position: center;
    background-repeat: no-repeat;
    min-height: 100vh;
    
} */

.row {
    padding-top: 5vh;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
    justify-items: center;
}

.custom-img {
    width: 80%;
}

.navigation-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    text-align: center;
}

.navigation-list a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

.nav-text {
    text-align: center;
    font-family: 'Miso';
    font-size: 2.5vw;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    letter-spacing: 12.32px;
    padding: 1.7vh;
    transition: background-image 0.3s, color 0.3s, opacity 0.3s;
    opacity: 0.9;
}

.nav-text:hover {
    background-image: url('./assets/images/streak-paint.png');
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 1;
}

.nav-text:hover a {
    color: #0A579B;
}

.button-register-div {
    display: flex;
    justify-content: center;
}

button {
    position: relative;
    background: white;
    font-size: 1.2rem;
    font-weight: 500;
    color: #181818;
    border: 3px solid #FEC195;
    border-radius: 8px;
    box-shadow: 0 0 0 #fec1958c;
    transition: all .3s ease-in-out;
    cursor: pointer;
    text-align: center;
    font-family: 'IBM Plex Mono';
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    letter-spacing: 6px;
    padding: 2vh 2vh;
}

.star-1 {
    position: absolute;
    top: 20%;
    left: 20%;
    width: 25px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all 1s cubic-bezier(0.05, 0.83, 0.43, 0.96);
}

.star-2 {
    position: absolute;
    top: 45%;
    left: 45%;
    width: 15px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all 1s cubic-bezier(0, 0.4, 0, 1.01);
}

.star-3 {
    position: absolute;
    top: 40%;
    left: 40%;
    width: 5px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all 1s cubic-bezier(0, 0.4, 0, 1.01);
}

.star-4 {
    position: absolute;
    top: 20%;
    left: 40%;
    width: 8px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all .8s cubic-bezier(0, 0.4, 0, 1.01);
}

.star-5 {
    position: absolute;
    top: 25%;
    left: 45%;
    width: 15px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all .6s cubic-bezier(0, 0.4, 0, 1.01);
}

.star-6 {
    position: absolute;
    top: 5%;
    left: 50%;
    width: 5px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all .8s ease;
}

button:hover {
    background: #FED201;
    color: #0A579B;
    box-shadow: 0 0 25px #fec1958c;
}

button:hover .star-1 {
    position: absolute;
    top: -80%;
    left: -30%;
    width: 25px;
    height: auto;
    filter: drop-shadow(0 0 10px #fffdef);
    z-index: 2;
}

button:hover .star-2 {
    position: absolute;
    top: -25%;
    left: 10%;
    width: 15px;
    height: auto;
    filter: drop-shadow(0 0 10px #fffdef);
    z-index: 2;
}

button:hover .star-3 {
    position: absolute;
    top: 55%;
    left: 25%;
    width: 5px;
    height: auto;
    filter: drop-shadow(0 0 10px #fffdef);
    z-index: 2;
}

button:hover .star-4 {
    position: absolute;
    top: 30%;
    left: 80%;
    width: 8px;
    height: auto;
    filter: drop-shadow(0 0 10px #fffdef);
    z-index: 2;
}

button:hover .star-5 {
    position: absolute;
    top: 25%;
    left: 115%;
    width: 15px;
    height: auto;
    filter: drop-shadow(0 0 10px #fffdef);
    z-index: 2;
}

button:hover .star-6 {
    position: absolute;
    top: 5%;
    left: 60%;
    width: 5px;
    height: auto;
    filter: drop-shadow(0 0 10px #fffdef);
    z-index: 2;
}

.fil0 {
    fill: #FFFDEF
}

/*section-2-events */

.card {
    box-sizing: border-box;
    height: 45vh;
    min-width: 22rem;
    background: url(./assets/images/card.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    border: 1px solid white;
    box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
    backdrop-filter: blur(6px);
    border-radius: 17px;
    text-align: center;
    cursor: pointer;
    transition: all 0.5s;
    display: flex;
    align-items: center;
    justify-content: center;
    user-select: none;
    font-weight: bolder;
    color: black;
    display: none;
    transition: transform 0.5s ease-in-out, border 0.5s ease-in-out;
}

.card.active {
    display: block;

}


.card:not(.active) {
    display: none;
}

.events-headings h2 {
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
}

.events-headings h2.show {
    opacity: 1;
}

.arrow-mark-card-left,
.arrow-mark-card-right {
    cursor: pointer;
    transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out;

}

.arrow-mark-card-left:hover,
.arrow-mark-card-right:hover {
    filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.5));
    transform: scale(1.3);
}

.arrow-mark-card-left:hover,
.arrow-mark-card-right:hover {
    filter: brightness(1.2);
    /* Add a glow effect on hover */
}

.icon {
    vertical-align: middle;
}

.card:hover {
    border: 1px solid black;
    transform: scale(1.05);
}
/* ... */

